force-app/main/default/objects/SVMXA360__CONF_HierarchyFields__c/SVMXA360__CONF_HierarchyFields__c.object-meta.xml
<CustomObject>
    <description>This object stores the fields related to configuration details.</description>
    <label>Hierarchy Configuration Fields</label>
    <nameField>
        <displayFormat>AHCF-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy Configuration Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>