force-app/main/default/objects/SVMXA360__CONF_HierarchyFields__c/fields/SVMXA360__FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldAPIName__c</fullName>
    <description>Field API name of the field to be displayed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>