force-app/main/default/objects/SVMXA360__CONF_HierarchyFields__c/fields/SVMXA360__HierarchyConfigurationDetailId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HierarchyConfigurationDetailId__c</fullName>
    <description>The master Hierarchy configuration detail for which the fields are configured.</description>
    <label>Hierarchy Configuration Detail</label>
    <referenceTo>SVMXA360__CONF_HierarchyConfigDetail__c</referenceTo>
    <relationshipName>Hierarchy_Configuration_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>