force-app/main/default/objects/SVMXA360__CONF_HierarchyFields__c/fields/SVMXA360__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Sequence__c</fullName>
    <description>Field Display sequence.</description>
    <label>Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>